--- a/docs/_posts/2021-04-27-ssh-端口转发.md
+++ b/docs/_posts/2021-04-27-ssh-端口转发.md
@@ -26,12 +26,12 @@ categories:
 ### 本地转发
 
 ```shell
-ssh -L [端口]:[目标IP]:[目标端口] [跳板机用户名]@[跳板机IP]
+ssh -NL [端口]:[目标IP]:[目标端口] [跳板机用户名]@[跳板机IP]
 ssh -NL 13306:aliyuncs.com:3306 root@39.23.80.6
 # 访问 127.0.0.1:13306     ->  aliyuncs.com:3306
 ```
 
->  本地转发是将 `目标ip：目标端口` 映射到本地的 `127.0.0.1:端口`
+>  本地转发是将 `目标ip:目标端口` 映射到 `127.0.0.1:端口` <br>即: 访问`127.0.0.1:端口`等于访问`目标ip：目标端口`
 
 
 
@@ -42,18 +42,15 @@ ssh -NR [端口]:[目标IP]:[目标端口] [跳板机用户名]@[跳板机IP]
 ssh -NR 8080:47.104.164.235:80 root@8.136.136.247
 # 访问8.136.136.247:8080    -> 47.104.164.235:80
 
-ssh -NR 13306:aliyuncs.com:3306 root@39.23.80.6
-# 访问39.23.80.6:13306      -> aliyuncs.com:3306
-
 ssh -NR 8000:8.136.136.247:80 root@47.104.164.235
 # 访问47.104.164.235:8000   ->   8.136.136.247:80
 ```
 
-> 远端转发是将 `目标ip:目标端口` 映射到 `跳板机的ip：端口`
+> 远端转发是将 `目标ip:目标端口` 映射到 `跳板机的ip：端口` <br>即: 访问`跳板机的ip：端口`等于访问 `目标ip:目标端口`
 
 
 
-### 动态转发
+### 动态转发（相当于代理服务器）
 
 ```shell
 ssh -ND [本地socke代理端口] [跳板机用户名]@[跳板机IP]
@@ -68,3 +65,5 @@ ssh -D 2000 root@47.104.164.235
 > **目标地址:目标端口**是由本地发起的请求决定的
 >
 > 比如访问baidu.com 则相当于把这个请求首先发送到了47.104.164.235，然后由47.104.164.235进行访问后将数据转发回至本地
+>
+> 即: 访问百度流程变成  本地 -> 47.104.164.235 -> 百度
