--- a/docs/_posts/2021-04-27-ssh-端口转发.md
+++ b/docs/_posts/2021-04-27-ssh-端口转发.md
@@ -1,7 +1,7 @@
 ---
 title: SSH端口转发
 date: 2021-04-27 9:29:00
-description: SSH端口转发的两种方式 本地转发和远端转发
+description: SSH端口转发的三种方式 本地转发、远端转发和动态转发
 categories:
 - 服务器
 ---
