--- a/docs/_posts/2021-04-27-ssh-端口转发.md
+++ b/docs/_posts/2021-04-27-ssh-端口转发.md
@@ -54,7 +54,7 @@ ssh -NR 8000:8.136.136.247:80 root@47.104.164.235
 
 ```shell
 ssh -ND [本地socke代理端口] [跳板机用户名]@[跳板机IP]
-ssh -D 2000 root@47.104.164.235
+ssh -ND 2000 root@47.104.164.235
 
 # 在浏览器或系统设置中将socke代理改成本地  127.0.0.1:2000 
 # 然后本地所有的上网出口全部通过47.104.164.235进行转发。百度ip会发现本机ip是47.104.164.235
